force-app/main/default/objects/Expenses__c/Expenses__c.object-meta.xml
<CustomObject>
    <label>Expenses</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Exp No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>