force-app/main/default/objects/Expenses__c/fields/Expense_Name__c.field-meta.xml
<CustomField>
    <fullName>Expense_Name__c</fullName>
    <label>Expense Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowance for Parents</fullName>
            </value>
            <value>
                <fullName>Cable TV</fullName>
            </value>
            <value>
                <fullName>Childcare</fullName>
            </value>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>Conservancy Charges</fullName>
            </value>
            <value>
                <fullName>Diapers</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Domestic Helper</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Food/Groceries</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Pocket Money</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Telecommunication</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Tuition</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>