force-app/main/default/objects/Expenses__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expenses</fullName>
                <default>true</default>
                <label>Expenses</label>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>