force-app/main/default/objects/Expenses__c/fields/FA_No__c.field-meta.xml
<CustomField>
    <fullName>FA_No__c</fullName>
    <label>FA No.</label>
    <referenceTo>Financial_Assistance__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>