force-app/main/default/objects/Expenses__c/fields/Issuing_Bank__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Bank__c</fullName>
    <label>Issuing Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DBS</fullName>
            </value>
            <value>
                <fullName>UOB</fullName>
            </value>
            <value>
                <fullName>OCBC</fullName>
            </value>
            <value>
                <fullName>Stanchart</fullName>
            </value>
            <value>
                <fullName>Maybank</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>